--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -3,40 +3,67 @@
 <head>
   <meta charset="UTF-8">
   <title>Spotify</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-Premium Discover Help Download
 
-Music for everyone.
-Spotify is now free on mobile, tablet and computer.
-Listen to the right music, wherever you are.
 
-What’s on Spotify?
 
-Millions of Songs
-There are millions of
-songs on Spotify
 
-HD Music
-Listen to music as if you
-were listening live
 
-Stream Everywhere
-Stream music on your
-smartphone, tablet or
-computer
+    <nav>
+      <div class="navlogo">
+        <img id="logo" src="images/spotify-logo.png">
+      </div>
+      <ul>
+        <li>Premium</li>
+        <li>Discover</li>
+        <li>Help</li>
+        <li>Download</li>
+      </ul>
+    </nav>
 
-It’s as yeezy as Kanye West.
-Search
-Know what you want to listen to?
-Just search and hit play.
-Browse
-Check out the latest charts,
-brand new releases and great
-playlists for right now.
-Discover
-Enjoy new music every Monday
-with your own personal playlist.
-Or sit back and enjoy Radio.
-</body>
-</html>
+
+
+  <div class="lp">
+    <div class="wrapper">
+      <h1>Music for everyone.<h1>
+        <p class="lpt">Spotify is now free on mobile, tablet and computer.
+          Listen to the right music, wherever you are.</p>
+        </div>
+      </div>
+
+      <section>
+
+
+        What’s on Spotify?
+
+        Millions of Songs
+        There are millions of
+        songs on Spotify
+
+        HD Music
+        Listen to music as if you
+        were listening live
+
+        Stream Everywhere
+        Stream music on your
+        smartphone, tablet or
+        computer
+
+        It’s as yeezy as Kanye West.
+        Search
+        Know what you want to listen to?
+        Just search and hit play.
+        Browse
+        Check out the latest charts,
+        brand new releases and great
+        playlists for right now.
+        Discover
+        Enjoy new music every Monday
+        with your own personal playlist.
+        Or sit back and enjoy Radio.
+      </section>
+
+    </body>
+    </html>
